@@ -4,13 +4,14 @@ A web crawler implementations in Java.
 
 ## Design alternatives
 
-- [V1: Sequential](./docs/sequential-crawler-overview.png)
-- [V2: Producer-Consumer Pattern (Executor Service)](./docs/producer-consumer-crawler-overview.png)
-- [V3: Recursive Design](./docs/recursive-crawler-overview.png)
-- [V4: Recursive Design with Executor Service](./docs/multi-threaded-recursive-crawler-overview.png)
-- [V5: Actor Model (Message-Passing with Executor Service)](./docs/actor-model-crawler-overview.png)
-- [V6: Recursive Actor Model (Hybrid Approach)](./docs/recursive-actor-crawler-overview.png)
-- [V7: Structural Concurrency (Java 25 Preview)](./docs/structural-concurrency-crawler-overview.png)
+- [V1: Sequential](./docs/v1/sequential-crawler-overview.png)
+- [V2: Producer-Consumer Pattern (Executor Service)](./docs/v2/producer-consumer-crawler-overview.png)
+- [V3: Recursive Design](./docs/v3/recursive-crawler-overview.png)
+- [V4: Recursive Design with Executor Service](./docs/v4/multi-threaded-recursive-crawler-overview.png)
+- [V5: Actor Model (Message-Passing with Executor Service)](./docs/v5/actor-crawler-overview.png)
+- [V6: Recursive Actor Model (Hybrid Approach)](./docs/v6/recursive-actor-crawler-overview.png)
+- [V7: Structural Concurrency (Java 25 Preview)](./docs/v7/structural-concurrency-crawler-overview.png)
+- [V8: Hybrid Actor-Structural Concurrency (Java 25 Preview)](./docs/v8/hybrid-actor-structural-crawler-overview.png)
 - Pipeline/Chain of Responsibility
 - Strategy Pattern (Pluggable Components)
 - Visitor Pattern (Content Processing)
@@ -18,7 +19,7 @@ A web crawler implementations in Java.
 ## How to test
 
 ```bash
-# Run E2E tests (requires Java 25 with preview features for V7)
+# Run E2E tests (requires Java 25 with preview features for V7 and V8)
 ./mvnw test -Pe2e -Dtest.e2e=true -Dtest=ComparisonE2ETest
 
 ./mvnw compile exec:java -Pexamples \
@@ -38,6 +39,11 @@ A web crawler implementations in Java.
 ./mvnw compile -Pexamples
 java --enable-preview -cp target/classes:$(./mvnw dependency:build-classpath \
 -q -Dmdep.outputFile=/dev/stdout)    info.jab.crawler.v7.StructuralConcurrencyCrawlerExample
+# V8 Hybrid Actor-Structural Concurrency (requires Java 25 with preview features)
+# Run directly with Java (Maven exec plugin doesn't work well with preview features)
+./mvnw compile -Pexamples
+java --enable-preview -cp target/classes:$(./mvnw dependency:build-classpath \
+-q -Dmdep.outputFile=/dev/stdout)    info.jab.crawler.v8.HybridActorStructuralCrawlerExample
 ```
 
 ## Java 25 Structural Concurrency (V7)
@@ -57,6 +63,38 @@ The V7 implementation demonstrates Java 25's structural concurrency features:
 - **Structured Scoping**: Clear boundaries for concurrent operations
 
 **Note**: The Maven exec plugin doesn't work reliably with Java 25 preview features, so direct Java execution is recommended for V7.
+
+## Java 25 Hybrid Actor-Structural Concurrency (V8)
+
+The V8 implementation combines the best of both paradigms:
+
+### Requirements
+- Java 25 (Early Access) with preview features enabled
+- `--enable-preview` flag for compilation and execution
+
+### Key Benefits
+- **Actor-Based Coordination**: Supervisor actor manages state, coordination, and fault tolerance
+- **Structural Concurrency**: Automatic resource management with StructuredTaskScope
+- **Message Passing**: Reuses v6 ActorMessage system for coordination
+- **Virtual Thread Efficiency**: Leverages virtual threads for optimal I/O operations
+- **Fault Isolation**: Actor coordination failures don't affect crawling tasks
+- **Hybrid Architecture**: Best of both actor model and structural concurrency
+
+### Architecture
+```
+V8 Hybrid Approach:
+├── SupervisorActor (Actor-based coordination)
+│   ├── State Management (visitedUrls, successfulPages, failedUrls)
+│   ├── Message Processing (using v6 ActorMessage system)
+│   └── Fault Tolerance (supervisor pattern)
+└── Structural Concurrency (actual crawling work)
+    ├── StructuredTaskScope for parallel page fetching
+    ├── Automatic resource management
+    ├── Virtual threads for I/O efficiency
+    └── Built-in cancellation propagation
+```
+
+**Note**: The Maven exec plugin doesn't work reliably with Java 25 preview features, so direct Java execution is recommended for V8.
 
 ### Maven Configuration
 The `pom.xml` is configured to automatically enable preview features for:
